# esp-bug-test

./: .gitignore  Cargo.toml  sdkconfig.defaults
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
